newsletter and card body completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,158 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a class="btn btn-warning">Test</a>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+      <div class="container">
+        <a href="#home" class="navbar-brand">
+          <img src="img/mlogo.png" width="50" height="50" />
+          <h3 class="d-inline align-middle">Fizuxe</h3>
+        </a>
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="#home" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#meettheauthors" class="nav-link">Meet The Authors</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--Showcase section-->
+    <section id="showcase-section" class="py-5">
+      <div class="primary-overlay text-white">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 text-center">
+              <h3 class="display-3 mt-5 pt-5">Do What You Dream Off...</h3>
+              <p class="lead">
+                Lorem ipsum dolor sit asoluta. Accusantium ab vel, aut quidem
+                distinctio at velit hic similique sunt!
+              </p>
+              <a class="btn btn-outline-secondary btn-lg"
+                ><i class="fa fa-arrow-right"></i>Read more</a
+              >
+            </div>
+            <div class="col-lg-6">
+              <img class="img-fluid d-none d-lg-block" src="img/book.png" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Newsletter section-->
+    <section id="newsletter-section" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <form>
+              <div class="form-row ">
+                <div class="col-md-4 ">
+                  <input
+                    type="text"
+                    class="form-control form-control-lg mb-resp"
+                    placeholder="Enter Name"
+                  />
+                </div>
+                <div class="col-md-4">
+                  <input
+                    type="text"
+                    class="form-control form-control-lg mb-resp"
+                    placeholder="Enter Email"
+                  />
+                </div>
+                <div class="col-md-4">
+                  <a href="#" class="btn btn-primary  btn-block btn-lg"
+                    >Subscribe me</a
+                  >
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Card section-->
+    <section id="card-section" class="bg-light py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 ">
+            <div
+              class="card text-center border-primary mb-resp "
+              
+            >
+              <div class="card-body">
+                <h3 class="card-title text-primary ">Be Better</h5>
+                <div class="card-body">
+                  <p >
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Amedelectus fuga
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center text-white bg-primary mb-resp" >
+              <div class="card-body">
+                <h5 class="card-title text-center">Be Smarter</h5>
+                <div class="card-body">
+                  <p >
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Amedelectus fuga
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center border-primary mb-resp" >
+              <div class="card-body">
+                <h5 class="card-title text-center">Be Faster</h5>
+                <div class="card-body">
+                  <p >
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Amedelectus fuga
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center text-white bg-primary " >
+              <div class="card-body">
+                <h5 class="card-title text-center">Be Sharper</h5>
+                <div class="card-body">
+                  <p >
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Amedelectus fuga
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.js"
       integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
