--- a/index.html
+++ b/index.html
@@ -226,6 +226,120 @@
       </div>
     </section>
 
+    <!--Author Section-->
+    <section id="author-section" class="py-5 text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header mb-5">
+              <h1 class="text-primary pb-3">Meet The Authors</h1>
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum numquam aperiam dolores a porro!</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <h3>Susan Williams</h3>
+                <h5 class="text-muted">Lead Writer</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi nostrum, ab libero voluptas officia</p>
+              </div>
+              <div class="justify-content-center d-flex">
+                <div class="p-4">
+                  <a href="http://www.facebook.com">
+                  <i class="fa fa-facebook"></i></a>
+                </div>
+                <div class="p-4">
+                    <a href="http://www.twitter.com">
+                    <i class="fa fa-twitter"></i></a>
+                  </div>
+                  <div class="p-4">
+                      <a href="http://www.instagram.com">
+                      <i class="fa fa-instagram"></i></a>
+                    </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+              <div class="card">
+                <div class="card-body">
+                  <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                  <h3>Grace Smith</h3>
+                  <h5 class="text-muted">Co-Writer</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi nostrum, ab libero voluptas officia</p>
+                </div>
+                <div class="justify-content-center d-flex">
+                  <div class="p-4">
+                    <a href="http://www.facebook.com">
+                    <i class="fa fa-facebook"></i></a>
+                  </div>
+                  <div class="p-4">
+                      <a href="http://www.twitter.com">
+                      <i class="fa fa-twitter"></i></a>
+                    </div>
+                    <div class="p-4">
+                        <a href="http://www.instagram.com">
+                        <i class="fa fa-instagram"></i></a>
+                      </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="card">
+                  <div class="card-body">
+                    <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                    <h3>John-Doe</h3>
+                    <h5 class="text-muted">Editor</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi nostrum, ab libero voluptas officia</p>
+                  </div>
+                  <div class="justify-content-center d-flex">
+                    <div class="p-4">
+                      <a href="http://www.facebook.com">
+                      <i class="fa fa-facebook"></i></a>
+                    </div>
+                    <div class="p-4">
+                        <a href="http://www.twitter.com">
+                        <i class="fa fa-twitter"></i></a>
+                      </div>
+                      <div class="p-4">
+                          <a href="http://www.instagram.com">
+                          <i class="fa fa-instagram"></i></a>
+                        </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                      <h3>Kevin Swanson</h3>
+                      <h5 class="text-muted">Designer</h5>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi nostrum, ab libero voluptas officia</p>
+                    </div>
+                    <div class="justify-content-center d-flex">
+                      <div class="p-4">
+                        <a href="http://www.facebook.com">
+                        <i class="fa fa-facebook"></i></a>
+                      </div>
+                      <div class="p-4">
+                          <a href="http://www.twitter.com">
+                          <i class="fa fa-twitter"></i></a>
+                        </div>
+                        <div class="p-4">
+                            <a href="http://www.instagram.com">
+                            <i class="fa fa-instagram"></i></a>
+                          </div>
+                    </div>
+                  </div>
+                </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.js"
       integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
