--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body id="home" data-spy="scroll" data-target="#main-nav">
     <!--Navbar-->
-    <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top py-4" id="main-nav">
       <div class="container">
         <a href="#home" class="navbar-brand">
           <img src="img/mlogo.png" width="50" height="50" />
@@ -33,13 +33,13 @@
               <a href="#home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link">About</a>
+              <a href="#about-section" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="#meettheauthors" class="nav-link">Meet The Authors</a>
+              <a href="#author-section" class="nav-link">Meet The Authors</a>
             </li>
             <li class="nav-item">
-              <a href="#contact" class="nav-link">Contact</a>
+              <a href="#contact-section" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -340,6 +340,62 @@
       </div>
     </section>
 
+    <!--Contact Section-->
+    <section id="contact-section" class="bg-light py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9">
+            <h3>Get in touch!</h3>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, temporibus!</p>
+            <form>
+              <div class="input-group input-group-lg mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fa fa-user"></i>
+                  </span>
+                </div>
+                <input type="text" placeholder="Email" class="form-control">
+              </div>
+              <div class="input-group input-group-lg mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">
+                      <i class="fa fa-envelope-open-o"></i>
+                    </span>
+                  </div>
+                  <input type="text" placeholder="Name" class="form-control">
+                </div>
+                <div class="input-group input-group-lg mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="fa fa-pencil"></i>
+                      </span>
+                    </div>
+                    <textarea placeholder="Your message" rows="5" class="form-control "></textarea>
+                    
+                  </div>
+                  <input type="submit" value="submit" class="btn btn-primary btn-block btn-lg">
+            </form>
+          </div>
+          <div class="col-lg-3 align-self-center">
+            <img src="img/mlogo.png" class="img-fluid ">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Footer-->
+    <footer id="main-footer" class="py-5 bg-primary text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="lead">Copyright &copy;
+              <span id="year"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.js"
       integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -357,5 +413,25 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+    
+      $('body').scrollspy({target:'#main-nav'});
+      // Smooth Scrolling
+    $("#main-nav a").on('click', function (event) {
+      if (this.hash !== "") {
+        event.preventDefault();
+
+        const hash = this.hash;
+
+        $('html, body').animate({
+          scrollTop: $(hash).offset().top
+        }, 800, function () {
+
+          window.location.hash = hash;
+        });
+      }
+    });
+    </script>
   </body>
 </html>
